--- a/animation/index.css
+++ b/animation/index.css
@@ -1,15 +1,28 @@
 body{
-    padding:0px;
-    margin:0px;
-    background: rgb(80,80,80) ;
-    overflow: hidden;
-  }
+  padding:0px;
+  margin:0px;
+  background: rgb(80,80,80) ;
+  overflow: hidden;
+}
+canvas{
+  background:white;
+  position:absolute;
+  top:0;
+  left:50vw;
+  transform:translate(-50%,0);
+  width:100vh;
+  height:100vh;
+}
+
+@media all and (orientation: portrait) {
+    
   canvas{
-    background:white;
-    position:absolute;
-    top:100%;
-    left:50%;
-    transform:translate(-50%,-100%);
-    width:100vmax;
-    height:100vmax;
-  }  
+    
+  position:absolute;
+  top:50vh;
+  left:0;
+  transform:translate(0%,-50%);
+    width:100vw;
+    height:100vw;
+  }
+}
